# macchina

./: .gitignore  .gitmodules  CARGO_README.md  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  README_CARGO.md  build.rs  file  log  macchina.1  macchina.adoc  macchina.toml  test.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: macchina-release-tag.yml  macchina.yml  rust.yaml
ascii/: arch.ascii  archlinux.ascii  archlinux.unicode  ascii  rust.ascii
contrib/: README.md  macchina-ascii.sh  macchina-video.sh
contrib/ascii/: archlinux.ascii  fedoralinux.ascii
contrib/scripts/: macchina-video.sh
contrib/themes/: Beryllium.toml  Helium.toml  Hydrogen.toml  Lithium.toml
doc/: README.md  macchina.1  macchina.1.scd  macchina.7  macchina.7.scd  macchina.adoc  macchina.toml
doc/adoc/: macchina.1.adoc  macchina.2.adoc  macchina.7.adoc
doc/man/: macchina.1  macchina.2  macchina.7
macchina/: Cargo.toml
macchina-read/: Cargo.toml  README.md  build.rs
macchina-read/src/: extra.rs  lib.rs  traits.rs
macchina-read/src/android/: mod.rs
macchina-read/src/linux/: mod.rs
macchina-read/src/macos/: mach_ffi.rs  mod.rs
macchina-read/src/netbsd/: mod.rs
macchina-read/src/shared/: mod.rs
macchina-read/src/windows/: mod.rs
macchina/src/: ascii.rs  bars.rs  display.rs  doctor.rs  format.rs  main.rs  theme.rs
macchina/src/data/: mod.rs
macchina/src/widgets/: readout.rs
src/: TODO.org  ascii.rs  bars.rs  buffer.rs  cli.rs  config.rs  display.rs  doctor.rs  error.rs  extra.rs  format.rs  kernel.rs  machine.rs  main.rs  memory.rs  product.rs  read.rs  theme.rs  theme_structs.rs
src/data/: mod.rs
src/read/: battery.rs  general.rs  kernel.rs  memory.rs  package.rs  product.rs  read.rs
src/theme/: base.rs  borders.rs  color.rs  components.rs  mod.rs  parser.rs  theme.rs
src/widgets/: mod.rs  readout.rs
theme/: Carbon.json  Carbon.toml
themes/: Helium.toml  Hydrogen.toml
