[package]
name = "macchina"
version = "6.0.6"
authors = ["Aziz Ben Ali <ba.tahaaziz@gmail.com>", "Marvin Haschker <marvin@haschker.me>", "Uttarayan Mondal <email@uttarayan.me>"]
edition = "2021"
description = "A system information fetcher, with an (unhealthy) emphasis on performance."
keywords = ["system", "fetch", "cli"]
repository = "https://github.com/Macchina-CLI/macchina"
license = "MIT"
readme = "README.md"
build = "build.rs"

[dependencies]
libmacchina = { version = "6.1.1", features = ["version"] }
bytesize = "1.1.0"
shellexpand = "2.1.0"
clap = "2.34.0"
atty= "0.2.14"
colored = "2.0.0"
structopt = "0.3.25"
rand = "0.8.5"
unicode-width = "0.1.9"
lazy_static = "1.4.0"
ansi-to-tui = "0.6.0"
dirs = "4.0"
toml = "0.5.9"
serde_json = "1.0.81"
color-to-tui = "0.2.0"
thiserror = "1.0.31"
tui = { version = "0.18.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.137", features = ["derive"] }

[build-dependencies.vergen]
version = "6.0.0"
default-features = false
features = ["build", "cargo", "git", "rustc"]

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = true
codegen-units = 1

[features]
openwrt = ["libmacchina/openwrt"]
