[package]
name = "macchina"
version = "6.1.6"
authors = ["Aziz Ben Ali <ba.tahaaziz@gmail.com>", "Marvin Haschker <marvin@haschker.me>", "Uttarayan Mondal <email@uttarayan.me>"]
edition = "2021"
description = "A system information fetcher, with an (unhealthy) emphasis on performance."
keywords = ["system", "fetch", "cli"]
repository = "https://github.com/Macchina-CLI/macchina"
license = "MIT"
readme = "README.md"
build = "build.rs"

[dependencies]
libmacchina = { version = "6.3.0", features = ["version"] }
bytesize = "1.1.0"
shellexpand = "2.1.2"
clap = { version = "3.2.21", features = ["derive"] }
atty= "0.2.14"
colored = "2.0.0"
rand = "0.8.5"
unicode-width = "0.1.10"
lazy_static = "1.4.0"
ansi-to-tui = "2.0.0"
color-to-tui = "0.2.0"
dirs = "4.0.0"
toml = "0.5.9"
serde_json = "1.0.85"
thiserror = "1.0.35"
tui = { version = "0.19.0", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.144", features = ["derive"] }

[build-dependencies.vergen]
version = "7.4.2"
default-features = false
features = ["build", "cargo", "git", "rustc"]

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = true
codegen-units = 1

[features]
openwrt = ["libmacchina/openwrt"]
