[package]
name = "macchina-read"
version = "0.1.3"
authors = ["grtcdr <ba.tahaaziz@gmail.com>", "Marvin Haschker <marvin@haschker.me>"]
edition = "2018"
description = "Provides the fetching capabilities for Macchina."
keywords = ["system", "fetch", "cli"]
repository = "https://github.com/grtcdr/macchina"
readme = "README.md"
license = "MIT"
build = "build.rs"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.88"
local_ipaddress = "0.1.3"
lazy_static = "1.4.0"

[target.'cfg(target_os = "netbsd")'.dependencies]
nix = "0.20.0"
regex = "1.4.5"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.4.0"

[target.'cfg(any(target_os = "linux", target_os = "netbsd"))'.dependencies]
os-release = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
sqlite = "0.25.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.1"
mach = "0.3.2"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
sysctl = "0.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.4.0"
winreg = "0.8.0"
