[package]
name = "macchina"
version = "0.6.1"
authors = ["grtcdr <ba.tahaaziz@gmail.com>", "Marvin Haschker <marvin@haschker.me>"]
edition = "2018"
description = "A fast and minimal system information fetcher."
keywords = ["system", "fetch", "cli"]
repository = "https://github.com/grtcdr/macchina"
license = "MIT"
readme = "../README_CARGO.md"

[dependencies]
colored = "2.0.0"
num_cpus = "1.13.0"
bytesize = "1.0.1"
clap = "2.33.3"
structopt = "0.3.21"
rand = "0.8.3"
lazy_static = "1.4.0"
macchina-read = { version = "0.1.3", path = "../macchina-read" }