[package]
name = "macchina"
version = "0.6.1"
authors = ["grtcdr <ba.tahaaziz@gmail.com>", "Marvin Haschker <marvin@haschker.me>"]
edition = "2018"
description = "A system information fetcher, with a focus on performance and minimalism."
keywords = ["system", "fetch", "cli"]
repository = "https://github.com/Macchina-CLI/macchina"
license = "MIT"
readme = "../README_CARGO.md"

[dependencies]
num_cpus = "1.13.0"
libmacchina = "0.1.3"
bytesize = "1.0.1"
clap = "2.33.3"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
colored = "2.0.0"
structopt = "0.3.21"
rand = "0.8.3"
unicode-width = "0.1.8"
lazy_static = "1.4.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
